added html codes

--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <title>LORAX</title>
+    </head>
+    <body>
+        <section>
+            <div>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="shop.html">Shop</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                    <li><a href="cart.html">Cart</a></li>
+                </ul>
+            </div>
+        </section>
+
+        <section>
+            <h2>Shoes for every occasion</h2>
+            <h1>Offers on all products</h1>
+            <p>Save more with cupons - upto 70% off!!!</p>
+            <button>Shop now</button>
+        </section>
+        
+        <section id="feature">
+            <div class="fe-box"></div>
+        </section>
+    </body>
 </html>
