--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
             <p>&copy; 2024 Lorax Inc. All Rights Reserved.</p>
         </div>
     </footer>
-    <script type="module" src="app.js"></script>
+    <script type="module" src="signIn.js"></script>
 </body>
 </html>
